--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Ed'sWindowsMods
+title: EdsWindowsMods
 logo: /assets/img/logo.png
 description: A better Windows experience.
 show_downloads: true
