--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: EdsWindowsMods
 logo: /assets/img/logo.png
 description: A better Windows experience.
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
